tests/integration/snapshots/integration__change_history__mixed_ai_and_human_edits_change_history.snap
---
source: tests/integration/change_history.rs
expression: sanitized
---
[
    ChangeHistoryEntry {
        timestamp: 0,
        kind: "known_human",
        conversation_id: None,
        agent_type: None,
        prompt_id: None,
        model: None,
        prompt_text: None,
        files: {
            "feature.txt": FileChangeDetail {
                added_lines: [
                    "1-3",
                ],
                deleted_lines: [],
                added_line_contents: [
                    "1: ||__AI LINE__ PENDING__||",
                    "2: ||__AI LINE__ PENDING__||",
                    "3: ||__AI LINE__ PENDING__||",
                ],
                deleted_line_contents: [],
            },
        },
        line_stats: CheckpointLineStats {
            additions: 3,
            deletions: 0,
            additions_sloc: 3,
            deletions_sloc: 0,
        },
    },
    ChangeHistoryEntry {
        timestamp: 0,
        kind: "ai_agent",
        conversation_id: Some(
            "CONV_ID",
        ),
        agent_type: Some(
            "mock_ai",
        ),
        prompt_id: None,
        model: Some(
            "unknown",
        ),
        prompt_text: None,
        files: {
            "feature.txt": FileChangeDetail {
                added_lines: [
                    "1-3",
                ],
                deleted_lines: [
                    "1-3",
                ],
                added_line_contents: [
                    "1: fn main() {",
                    "2:     println!(\"hello\");",
                    "3: }",
                ],
                deleted_line_contents: [
                    "1: ||__AI LINE__ PENDING__||",
                    "2: ||__AI LINE__ PENDING__||",
                    "3: ||__AI LINE__ PENDING__||",
                ],
            },
        },
        line_stats: CheckpointLineStats {
            additions: 3,
            deletions: 3,
            additions_sloc: 3,
            deletions_sloc: 3,
        },
    },
    ChangeHistoryEntry {
        timestamp: 0,
        kind: "known_human",
        conversation_id: None,
        agent_type: None,
        prompt_id: None,
        model: None,
        prompt_text: None,
        files: {
            "config.txt": FileChangeDetail {
                added_lines: [
                    "1-2",
                ],
                deleted_lines: [],
                added_line_contents: [
                    "1: ||__AI LINE__ PENDING__||",
                    "2: ||__AI LINE__ PENDING__||",
                ],
                deleted_line_contents: [],
            },
        },
        line_stats: CheckpointLineStats {
            additions: 2,
            deletions: 0,
            additions_sloc: 2,
            deletions_sloc: 0,
        },
    },
    ChangeHistoryEntry {
        timestamp: 0,
        kind: "ai_agent",
        conversation_id: Some(
            "CONV_ID",
        ),
        agent_type: Some(
            "mock_ai",
        ),
        prompt_id: None,
        model: Some(
            "unknown",
        ),
        prompt_text: None,
        files: {
            "config.txt": FileChangeDetail {
                added_lines: [
                    "1-2",
                ],
                deleted_lines: [
                    "1-2",
                ],
                added_line_contents: [
                    "1: key = value",
                    "2: debug = true",
                ],
                deleted_line_contents: [
                    "1: ||__AI LINE__ PENDING__||",
                    "2: ||__AI LINE__ PENDING__||",
                ],
            },
        },
        line_stats: CheckpointLineStats {
            additions: 2,
            deletions: 2,
            additions_sloc: 2,
            deletions_sloc: 2,
        },
    },
    ChangeHistoryEntry {
        timestamp: 0,
        kind: "human",
        conversation_id: None,
        agent_type: None,
        prompt_id: None,
        model: None,
        prompt_text: None,
        files: {
            "feature.txt": FileChangeDetail {
                added_lines: [
                    "2-4",
                ],
                deleted_lines: [
                    "2-3",
                ],
                added_line_contents: [
                    "2:     println!(\"goodbye\");",
                    "3: }",
                    "4: fn helper() {}",
                ],
                deleted_line_contents: [
                    "2:     println!(\"hello\");",
                    "3: }",
                ],
            },
        },
        line_stats: CheckpointLineStats {
            additions: 3,
            deletions: 2,
            additions_sloc: 3,
            deletions_sloc: 2,
        },
    },
]